--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/koa-router": "^7.4.4",
     "@types/koa-session": "^6.4.1",
     "@types/mysql": "^2.15.21",
+    "@types/pg": "^8.10.9",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "eslint": "^8.46.0",
@@ -31,11 +32,12 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.1",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.0",
     "koa-session": "^6.4.0",
-    "mysql2": "^3.6.0",
+    "pg": "^8.11.3",
     "uuid": "^9.0.0"
   }
 }
