--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "admin",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "build": "tsc",
+    "start":"node dist/index.js"
   },
   "author": "abhash/sudhanshu",
   "license": "ISC",
