--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
-    "start":"node dist/index.js"
+    "start": "node dist/index.js",
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts"
   },
   "author": "abhash/sudhanshu",
   "license": "ISC",
@@ -20,15 +21,14 @@
     "@types/mysql": "^2.15.21",
     "@types/pg": "^8.10.9",
     "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "eslint": "^8.46.0",
-    "eslint-config-standard-with-typescript": "^37.0.0",
-    "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-n": "^16.0.1",
-    "eslint-plugin-promise": "^6.1.1",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
     "koa": "^2.14.2",
     "koa2-cors": "^2.0.6",
     "nodemon": "^3.0.1",
+    "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
