--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node src/index.ts"
+    "start": "nodemon --exec ts-node src/index.ts",
+    "migrate": "knex migrate:latest --knexfile src/db/knexfile.js"
   },
   "author": "abhash/sudhanshu",
   "license": "ISC",
@@ -32,10 +33,14 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "jsonwebtoken": "^9.0.1",
+    "knex": "^3.0.1",
     "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.0",
     "koa-session": "^6.4.0",
+    "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
+    "pg": "^8.11.3",
+    "postgres": "^3.4.3",
     "uuid": "^9.0.0"
   }
 }
