Restructured whole app

--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "admin",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts"
-  },
-  "author": "abhash/sudhanshu",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/koa": "^2.13.8",
-    "@types/koa-bodyparser": "^4.3.10",
-    "@types/koa-router": "^7.4.4",
-    "@types/koa-session": "^6.4.1",
-    "@types/mysql": "^2.15.21",
-    "@types/pg": "^8.10.9",
-    "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
-    "koa": "^2.14.2",
-    "koa2-cors": "^2.0.6",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.1",
-    "koa-bodyparser": "^4.4.1",
-    "koa-router": "^12.0.0",
-    "koa-session": "^6.4.0",
-    "pg": "^8.11.3",
-    "uuid": "^9.0.0"
-  }
+    "name": "admin",
+    "version": "1.0.0",
+    "description": "",
+    "main": "dist/index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon --exec ts-node src/index.ts",
+        "build": "tsc",
+        "start": "node dist/index.js",
+        "lint": "eslint --ext .js,.ts,.tsx ."
+    },
+    "author": "abhash/sudhanshu",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/jsonwebtoken": "^9.0.5",
+        "@types/koa": "^2.13.8",
+        "@types/koa__cors": "^4.0.3",
+        "@types/koa-bodyparser": "^4.3.10",
+        "@types/koa-router": "^7.4.4",
+        "@types/mysql": "^2.15.21",
+        "@types/pg": "^8.10.9",
+        "@types/uuid": "^9.0.2",
+        "@typescript-eslint/eslint-plugin": "^6.13.1",
+        "@typescript-eslint/parser": "^6.13.1",
+        "eslint": "^8.54.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
+        "nodemon": "^3.0.1",
+        "prettier": "^3.1.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6"
+    },
+    "dependencies": {
+        "@koa/cors": "^4.0.0",
+        "bcrypt": "^5.1.0",
+        "dotenv": "^16.3.1",
+        "jsonwebtoken": "^9.0.1",
+        "koa": "^2.14.2",
+        "koa-bodyparser": "^4.4.1",
+        "koa-router": "^12.0.0",
+        "pg": "^8.11.3",
+        "uuid": "^9.0.0"
+    }
 }
