--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,9 +13,12 @@
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": ["@typescript-eslint"],
+    "plugins": ["@typescript-eslint", "simple-import-sort"],
     "rules": {
         "@typescript-eslint/no-unused-vars": "error",
-        "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+        "@typescript-eslint/consistent-type-definitions": ["error", "type"],
+        "@typescript-eslint/no-explicit-any": ["off"],
+        "simple-import-sort/imports": "error",
+        "simple-import-sort/exports": "error"
     }
 }
