--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "bcrypt": "^5.1.0",
         "dotenv": "^16.3.1",
         "jsonwebtoken": "^9.0.1",
+        "knex": "^3.0.1",
         "koa": "^2.14.2",
         "koa-bodyparser": "^4.4.1",
         "koa-router": "^12.0.0",
