--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
         "@types/jsonwebtoken": "^9.0.5",
+        "@types/knex": "^0.16.1",
         "@types/koa": "^2.13.8",
         "@types/koa__cors": "^4.0.3",
         "@types/koa-bodyparser": "^4.3.10",
         "@types/koa-router": "^7.4.4",
         "@types/mysql": "^2.15.21",
+        "@types/node": "^20.10.3",
         "@types/pg": "^8.10.9",
         "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "^6.13.1",
@@ -27,17 +29,17 @@
         "eslint": "^8.54.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-simple-import-sort": "^10.0.0",
+        "knex": "^3.0.1",
         "nodemon": "^3.0.1",
         "prettier": "^3.1.0",
         "ts-node": "^10.9.1",
-        "typescript": "^5.1.6"
+        "typescript": "^5.3.2"
     },
     "dependencies": {
         "@koa/cors": "^4.0.0",
         "bcrypt": "^5.1.0",
         "dotenv": "^16.3.1",
         "jsonwebtoken": "^9.0.1",
-        "knex": "^3.0.1",
         "koa": "^2.14.2",
         "koa-bodyparser": "^4.4.1",
         "koa-router": "^12.0.0",
