--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
         "dev": "nodemon --exec ts-node src/index.ts",
         "build": "tsc",
         "start": "node dist/index.js",
-        "lint": "eslint --ext .js,.ts,.tsx ."
+        "lint": "eslint --ext .js,.ts,.tsx .",
+        "knex": "ts-node ./node_modules/.bin/knex"
     },
     "author": "abhash/sudhanshu",
     "license": "ISC",
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
         "@types/jsonwebtoken": "^9.0.5",
+        "@types/knex": "^0.16.1",
         "@types/koa": "^2.13.8",
         "@types/koa__cors": "^4.0.3",
         "@types/koa-bodyparser": "^4.3.10",
@@ -29,7 +31,7 @@
         "eslint-plugin-simple-import-sort": "^10.0.0",
         "nodemon": "^3.0.1",
         "prettier": "^3.1.0",
-        "ts-node": "^10.9.1",
+        "ts-node": "^10.9.2",
         "typescript": "^5.1.6"
     },
     "dependencies": {
@@ -37,7 +39,7 @@
         "bcrypt": "^5.1.0",
         "dotenv": "^16.3.1",
         "jsonwebtoken": "^9.0.1",
-        "knex": "^3.0.1",
+        "knex": "^3.1.0",
         "koa": "^2.14.2",
         "koa-bodyparser": "^4.4.1",
         "koa-router": "^12.0.0",
